<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.aivicevic.randomusers.presentation.main.userdetails.UserDetailsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingStart="@dimen/screen_horizontal_spacing"
            android:paddingEnd="@dimen/screen_horizontal_spacing">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_profile"
                android:layout_width="256dp"
                android:layout_height="256dp"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:imageUrl="@{viewModel.userProfilePic}"
                tools:srcCompat="@drawable/ic_launcher_background" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/user_details_name_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{viewModel.userName}"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toTopOf="@+id/tv_name_label"
                app:layout_constraintStart_toEndOf="@+id/tv_name_label"
                app:layout_constraintBottom_toBottomOf="@+id/tv_name_label"
                tools:text="Foo McBar" />

            <View
                android:id="@+id/v_name_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/material_grey_700"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_dob_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/user_details_dob_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toBottomOf="@+id/v_name_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{viewModel.userDob}"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toTopOf="@+id/tv_dob_label"
                app:layout_constraintStart_toEndOf="@+id/tv_dob_label"
                app:layout_constraintBottom_toBottomOf="@+id/tv_dob_label"
                tools:text="08/24/1985" />

            <View
                android:id="@+id/v_dob_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/material_grey_700"
                app:layout_constraintTop_toBottomOf="@+id/tv_dob_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/user_details_location_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toBottomOf="@+id/v_dob_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{viewModel.userLocation}"
                android:textSize="18sp"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toTopOf="@+id/tv_location_label"
                app:layout_constraintStart_toEndOf="@+id/tv_location_label"
                app:layout_constraintBottom_toBottomOf="@+id/tv_location_label"
                tools:text="123 West St, Manhattan, NY 81623" />

            <View
                android:id="@+id/v_location_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/material_grey_700"
                app:layout_constraintTop_toBottomOf="@+id/tv_location_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/user_details_email_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toBottomOf="@+id/v_location_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{viewModel.userEmail}"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toTopOf="@+id/tv_email_label"
                app:layout_constraintStart_toEndOf="@+id/tv_email_label"
                app:layout_constraintBottom_toBottomOf="@+id/tv_email_label"
                tools:text="foo.mcbar@gmail.com" />

            <View
                android:id="@+id/v_email_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/material_grey_700"
                app:layout_constraintTop_toBottomOf="@+id/tv_email_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/user_details_phone_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toBottomOf="@+id/v_email_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{viewModel.userPhone}"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toTopOf="@+id/tv_phone_label"
                app:layout_constraintStart_toEndOf="@+id/tv_phone_label"
                app:layout_constraintBottom_toBottomOf="@+id/tv_phone_label"
                tools:text="(584) 206-5841" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/material_grey_700"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>